# 021-metayaml

./: .buildinfo  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  changelog.html  conduct.html  contributing.html  example.html  genindex.html  index.html  metayaml.py  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.github/workflows/: ci.yml
_modules/: index.html
_modules/metayaml/: cli.html
_sources/: example.ipynb.txt
_sources/autoapi/: index.rst.txt
_sources/autoapi/metayaml/: index.rst.txt
_sources/autoapi/metayaml/cli/: index.rst.txt
autoapi/: index.html
autoapi/metayaml/: index.html
autoapi/metayaml/cli/: index.html
docs/: Makefile  conf.py  make.bat
etc/: bad.yml  good.yml  schema.yml
example/: meta.yml  schema.yml
example/EU/: meta.yml
metayaml/: cli.py  core.py
src/metayaml/: __init__.py  cli.py
tests/: test_metayaml.py
