[tool.poetry]
name = "metayaml"
version = "0.1.0"
description = "Attributes of files and directories stored in YAML sidecar files"
authors = ["Daniel Loos"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
