[tool.poetry]
name = "metayaml"
version = "0.1.0"
description = "Attributes of files and directories stored in YAML sidecar files"
authors = ["Daniel Loos"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.3"
pyyaml = "^6.0"
jsonschema = "^4.17.3"
sphinx-autoapi = "^2.1.0"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
pytest-cov = "^4.0.0"
sphinx = "^7.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.poetry.scripts]
metayaml = "src.metayaml.cli:main"
